image with width and height controlled

--- a/ls_202/lesson-3/image.html
+++ b/ls_202/lesson-3/image.html
@@ -6,6 +6,7 @@
     <style>
       img {
         height: 350px; /* since we didn't specify the width, it adjusted automatically to maintain the same aspect ratio. */
+        width: 400px
       }
     </style>
   </head>
