image background and caption

--- a/ls_202/lesson-3/image.html
+++ b/ls_202/lesson-3/image.html
@@ -4,13 +4,18 @@
     <title>Two Cats</title>
     <meta charset="utf-8">
     <style>
-      img {
-        height: 350px; /* since we didn't specify the width, it adjusted automatically to maintain the same aspect ratio. */
-        width: 400px
+      figure {
+        background-color: yellow; 
       }
     </style>
   </head>
   <body>
-    <img src="https://d3jtzah944tvom.cloudfront.net/202/images/lesson_3/cats.jpg" alt="Two cute cats">
+    <figure> <!-- figure is a block element; streches most of the window -->
+      <img src="https://d3jtzah944tvom.cloudfront.net/202/images/lesson_3/cats.jpg" alt="Two cute cats">
+      <figcaption>
+        Butterscotch and Pudding held still long enough for me to capture this
+        picture of both of them.
+      </figcaption>
+    </figure>
   </body>
 </html>
