change namestate to id=state and remove elements

--- a/ls_202/lesson-5/form-layout3.html
+++ b/ls_202/lesson-5/form-layout3.html
@@ -22,13 +22,11 @@
       padding: 1rem;
     }
 
-    /* Custom appearance for labels */
     .styled-form label {
       font-weight: bold;
       line-height: 1.5rem;
     }
 
-    /* Custom appearance for input and select fields */
     .styled-form input[type="text"],
     .styled-form select {
       border: 1px solid #06c;
@@ -39,7 +37,6 @@
       padding: 5px 8px;
     }
 
-    /* More customization for select lists */
     .styled-form select {
       -moz-appearance: none;
       -webkit-appearance: none;
@@ -56,7 +53,7 @@
       display: block;
       width: 100%;
     }
-    /* Add to end of file */
+
     .styled-form label {
       padding-top: 0.3333rem;
     }
@@ -130,7 +127,7 @@
         <dl class="state partial">
           <dt><label for="state">State</label></dt>
           <dd>
-              <select name="state">
+              <select id="state">
                 <option>AK</option>
                 <option>AL</option>
                 <option>AR</option>
